--- a/about.html
+++ b/about.html
@@ -26,9 +26,8 @@
       <article class="article">
         <h2 class="title">About me</h2><br>
         <p class="paragraph-item">
-          I'm a student based in Indonesia, I love developing software<br />
-          that solves real-world problems. Interested in working with me on your
-          next project? <br />Let's talk
+          My name is Akbar Noviandi. I’m 17 years old and i was born in Kediri, On 10th November, 2005. I live in Kediri since i was child and now i study in SMK kATANEGARA WATES and i Am majoring in Network and Computer Engineering. I love listening music and my favorite music genre ss Pop, Metal/Rock. <br><br>I also like coding and sometimes i send my project to several people. Because i have such a hobby, My dream is to become a Software Engineer. Someday i can publish my own project based on real problem and attracted the attention of many people. That’s all about me. Thank You.. <br><br>Interested in working with me on your
+          next project? <br />Let's talk!
         </p><br>
         <h2 class="title">Tech stack</h2><br>
 
