--- a/blogs.html
+++ b/blogs.html
@@ -24,7 +24,7 @@
     </nav> 
     <main>
       <div class="article">
-        <h2 class="title">Overview</h2><br>
+        <h2 class="title">404 | Not Found</h2><br>
         <p class="paragraph-item">We're working hard to finish the development of <br>this site. You can contact me via social media <br>on this page ! <br>Btw males banget dari dulu ngebikinnya, selalu <br>mager kalau urusan front end :)</p>
       </div>
     </div>
