--- a/song.html
+++ b/song.html
@@ -30,7 +30,7 @@
         <h2 class="title">Music</h2>
         <p class="paragraph-item">List of my top tracks & current playing song</p><br>
         <img
-          src="image/spotify (1).png"
+          src="image/spotify.png"
           alt="Spotify"
           width="100px"
         />
